# jarvis-be

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: sync-fork.yml
app/: config.py  main.py
app/api/: workflows.py
app/models/: workflow.py
app/services/: workflow_generator.py
app/services/prompts/: workflow_system.jinja
docs/superpowers/plans/: 2026-07-01-fastapi-setup.md
docs/superpowers/specs/: 2026-07-01-fastapi-setup-design.md
tests/: test_config.py  test_workflows.py
