[project]
name = "jarvis-be"
version = "0.1.0"
description = "Jarvis backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.8",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
